# auto_wallpaper

./: .gitignore  Cargo.toml  README.md  config.toml
src/: config.rs  file_manager.rs  logger.rs  main.rs  utils.rs  wallpaper_manager.rs
