[package]
name = "auto_wallpaper"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
wallpaper = "3.2.0"
chrono = "0.4.38"
dirs = "5.0.1"
toml = "0.8.19"
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] } 
eframe = "*"
egui = "*"